--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,23 @@
+on:
+  push:
+    branches:
+      - master
 
+
+
+
+
+
+
+
+
+jobs:
+  build:
+    runs-on:ubuntu-latest
+
+    steps:
+      - name:'Testing github'
+        run: pwd
+
+      - name:'Testing Printing'
+        run: echo Ahmad
