--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,5 @@ jobs:
     runs-on:ubuntu-latest
 
     steps:
-      - name:'Testing github'
-        run: pwd
-
-      - name:'Testing Printing'
-        run: echo Ahmad
+      - name:'Printing folder contents'
+        run: ls
