--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
     runs-on:ubuntu-latest
 
     steps:
-      - name:'Printing folder contents'
+      - name: 'Printing folder'
         run: ls
