--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: "Printing folders"
+      - name: "Before"
+        run: ls
+
+      - uses: action/checkout@v3
+
+      - name: "After"
         run: ls
