--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: "Before"
+      - name: "Before1"
         run: ls
 
       - uses: action/checkout@v3
 
-      - name: "After"
+      - name: "After1"
         run: ls
