--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: "Before1"
-        run: ls
-
       - uses: actions/checkout@v3
 
-      - name: "After1"
-        run: ls
+      - name: "Login to Docker Hub"
+        run: docker login --username ahmedmohamed00qqqq --password dckr_pat_ZAkRiJPejfjc8EPbD7fj7CKy1gc
