--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: "Login to Docker Hub"
-        run: docker login --username ahmedmohamed00qqqq --password dckr_pat_ZAkRiJPejfjc8EPbD7fj7CKy1gc
+        run: docker login --username ${{secrets.DOCKER_USERNAME}}  --password ${{secrets.DOCKER_PASSWORD}}  
