--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,9 @@ jobs:
 
       - name: "Login to Docker Hub"
         run: docker login --username ${{secrets.DOCKER_USERNAME}}  --password ${{secrets.DOCKER_PASSWORD}}  
+
+      - name: "Building Docker Image"
+        run: docker build -t ${{secrets.DOCKER_USERNAME}}/myImage .
+
+      - name: "push to Docker Hub"
+        run: docker push ${{secrets.DOCKER_USERNAME}}/myImage 
