--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: "Login to Docker Hub"
-        run: docker login --username ${{secrets.DOCKER_USERNAME}}  --password ${{secrets.DOCKER_PASSWORD}}  
+        run: docker login --username ${{ secrets.DOCKER_USERNAME }}  --password ${{ secrets.DOCKER_PASSWORD }}  
 
-      - name: "Building Docker Image"
-        run: docker build -t ${{secrets.DOCKER_USERNAME}}/myImage .
+      - name: "Building docker image"
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/myimage.
 
-      - name: "push to Docker Hub"
-        run: docker push ${{secrets.DOCKER_USERNAME}}/myImage 
+      - name: "push to Docker hub"
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/myimage
